# tradingbot

./: .env  .gitignore  README.md  main.py  pyproject.toml  tradingbot.service
config/: blacklist.yaml  settings.py  strategy.yaml
core/: ai_brain.py  exchange.py  indicators.py  market_data.py  order_executor.py  position_manager.py  risk_manager.py  signal_engine.py
services/: data_collector.py  health_monitor.py  optimizer.py  telegram_bot.py  trader.py
storage/: database.py
systemd/: install.sh  trading-bot.service
tests/: test_indicators.py  test_risk_manager.py  test_signal_engine.py
utils/: helpers.py  logger.py
